fixing overflow caused by animated elements

--- a/src/components/header/Header.styles.css
+++ b/src/components/header/Header.styles.css
@@ -21,15 +21,15 @@
 }
 
 .menu-styling {
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     position: fixed;
     top: 3.5rem;
-    right: -100%;
+    left: 0;
+    bottom: 0;
     width: 100%;
-    height: 100%;
     background-color: #000000;
     transition: 0.5s ease-in-out;
 }
@@ -44,7 +44,7 @@
 }
 
 .show-menu {
-    right: 0;
+    display: flex;
 }
 
 .theme-button {
